--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body {
 }
 
 body {
-  background-color: lightsteelblue;
+  background-image: url("https://tot-tmp.azureedge.net/media/19591/bag-policy.jpg");
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +21,7 @@ body {
 }
 
 .app {
-  background-color: lightslategray;
+  background-color: rgba(146, 146, 146, 0.3);
   width: 450px;
   min-height: 200px;
   height: min-content;
@@ -36,7 +37,7 @@ body {
   align-items: center;
 }
 
-/* QUESTION/TIMER/LEFT SECTION */
+/* QUESTION SECTION */
 .question-section {
   width: 100%;
   position: relative;
@@ -66,13 +67,13 @@ button {
   width: 100%;
   font-size: 16px;
   color: #ffffff;
-  background-color: darkcyan;
+  background-color: darkslateblue;
   border-radius: 15px;
   display: flex;
   padding: 5px;
   justify-content: flex-start;
   align-items: center;
-  border: 4px solid lightseagreen;
+  border: 2px solid slateblue;
   cursor: pointer;
 }
 
